build/meson-logs/meson-log.txt
Build started at 2025-06-12T17:25:45.010618
Main binary: /home/kali/Téléchargements/Morse-Sequence/venv/bin/python
Build Options: 
Python system: Linux
The Meson build system
Version: 1.8.1
Source dir: /home/kali/Téléchargements/Morse-Sequence
Build dir: /home/kali/Téléchargements/Morse-Sequence/build
Build type: native build
Project name: morse_sequence
Project version: 0.2
C++ compiler for the host machine: c++ (gcc 14.2.0 "c++ (Debian 14.2.0-16) 14.2.0")
C++ linker for the host machine: c++ ld.bfd 2.44
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils for Debian) 2.44
Copyright © 2025 Free Software Foundation, Inc.
Ce logiciel est libre; vous pouvez le redistribuer selon les termes de la
version 3 de la licence GNU General Public License ou (à votre discrétion)
de toute version ultérieure. Aucune garantie n'est donnée sur ce programme.
-----------
C++ compiler for the build machine: c++ (gcc 14.2.0 "c++ (Debian 14.2.0-16) 14.2.0")
C++ linker for the build machine: c++ ld.bfd 2.44
-----------
Detecting archiver via: `gcc-ar --version` -> 0
stdout:
GNU ar (GNU Binutils for Debian) 2.44
Copyright © 2025 Free Software Foundation, Inc.
Ce logiciel est libre; vous pouvez le redistribuer selon les termes de la
version 3 de la licence GNU General Public License ou (à votre discrétion)
de toute version ultérieure. Aucune garantie n'est donnée sur ce programme.
-----------
Build machine cpu family: x86_64
Build machine cpu: x86_64
Host machine cpu family: x86_64
Host machine cpu: x86_64
Target machine cpu family: x86_64
Target machine cpu: x86_64
Program python3 found: YES (/home/kali/Téléchargements/Morse-Sequence/venv/bin/python)
Dependency pybind11 found: YES 2.13.6 (cached)
Build targets in project: 1

Found ninja-1.11.1.git.kitware.jobserver-1 at '/home/kali/Téléchargements/Morse-Sequence/venv/bin/ninja'
Running compile:
Working directory:  /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpchlppzw5
Code:

        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
-----------
Command line: `c++ '/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpchlppzw5/testfile.cpp' -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive` -> 0
Running compile:
Working directory:  /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s
Code:

        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
-----------
Command line: `c++ '/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp' -o '/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/output.obj' -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp: In function 'int main()':
/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9
Code:

        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
-----------
Command line: `c++ '/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/testfile.cpp' -o '/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/output.obj' -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive` -> 1
stderr:
/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~
-----------
Running compile:
Working directory:  /tmp/tmpdt_3d7hz
Code:
int i = static_cast<int>(0);
-----------
Command line: `c++ /tmp/tmpdt_3d7hz/testfile.cpp -o /tmp/tmpdt_3d7hz/output.obj -D_FILE_OFFSET_BITS=64 -c -std=c++17` -> 0
Compiler accepts -std=c++17: YES
Using cached compile:
Cached command line:  c++ /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpchlppzw5/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp -o /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp: In function 'int main()':
/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/testfile.cpp -o /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpchlppzw5/testfile.cpp -E -P -D_FILE_OFFSET_BITS=64 -P -O0 -fpermissive 

Code:
 
        #ifdef __has_include
         #if !__has_include("version")
          #error "Header 'version' could not be found"
         #endif
        #else
         #include <version>
        #endif
Cached compiler stdout:
 
Cached compiler stderr:
 
Using cached compile:
Cached command line:  c++ /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp -o /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        int main(void) {
            /* If it's not defined as a macro, try to use as a symbol */
            #ifndef _LIBCPP_VERSION
                _LIBCPP_VERSION;
            #endif
            return 0;
        }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp: In function 'int main()':
/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmp8948x25s/testfile.cpp:6:17: error: '_LIBCPP_VERSION' was not declared in this scope
    6 |                 _LIBCPP_VERSION;
      |                 ^~~~~~~~~~~~~~~

Using cached compile:
Cached command line:  c++ /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/testfile.cpp -o /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/output.obj -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive 

Code:
 
        #include <version>
        using _LIBCPP_VERSION;
        int main(void) { return 0; }
Cached compiler stdout:
 
Cached compiler stderr:
 /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpyw73bdg9/testfile.cpp:3:15: error: expected nested-name-specifier before '_LIBCPP_VERSION'
    3 |         using _LIBCPP_VERSION;
      |               ^~~~~~~~~~~~~~~

Running compile:
Working directory:  /home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpw7s5xe3u
Code:

-----------
Command line: `c++ '/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpw7s5xe3u/testfile.cpp' -o '/home/kali/Téléchargements/Morse-Sequence/build/meson-private/tmpw7s5xe3u/output.obj' -c -D_FILE_OFFSET_BITS=64 -O0 -fpermissive --print-search-dirs` -> 0
stdout:
install: /usr/lib/gcc/x86_64-linux-gnu/14/
programs: =/usr/libexec/gcc/x86_64-linux-gnu/14/:/usr/libexec/gcc/x86_64-linux-gnu/14/:/usr/libexec/gcc/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/14/:/usr/lib/gcc/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../x86_64-linux-gnu/bin/x86_64-linux-gnu/14/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../x86_64-linux-gnu/bin/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../x86_64-linux-gnu/bin/
libraries: =/usr/lib/gcc/x86_64-linux-gnu/14/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../x86_64-linux-gnu/lib/x86_64-linux-gnu/14/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../x86_64-linux-gnu/lib/x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../x86_64-linux-gnu/lib/../lib/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../x86_64-linux-gnu/14/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../x86_64-linux-gnu/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../lib/:/lib/x86_64-linux-gnu/14/:/lib/x86_64-linux-gnu/:/lib/../lib/:/usr/lib/x86_64-linux-gnu/14/:/usr/lib/x86_64-linux-gnu/:/usr/lib/../lib/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../../x86_64-linux-gnu/lib/:/usr/lib/gcc/x86_64-linux-gnu/14/../../../:/lib/:/usr/lib/
-----------
